--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-Based base on HGN: https://github.com/yuwfan/HGN
-1. download data and construct database
+1. download data and construct database: Based base on HGN: https://github.com/yuwfan/HGN
